--- a/src/components/EditableSection.css
+++ b/src/components/EditableSection.css
@@ -47,14 +47,20 @@
 }
 
 .save-btn {
+    display: flex;
     border-radius: 5px;
     background-color: #b197fc;
     color: white;
     border: none;
     padding: 8px 16px;
     margin-top: 10px;
+    margin: auto;
     cursor: pointer;
-    font-weight: 500;
+    width: 5rem;
+    height: 2rem;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
     transition: background-color 0.2s, transform 0.2s;
 }
 
